# fastapi-celery

./: .gitignore  README.md  celerybeat-schedule  docker-compose.yml  dump.rdb  fastapi-celery-project.code-workspace  main.py  pyproject.toml  tasks.db  test
alembic/versions/: 1c51332c7099_.py  4759a1b193cc_.py  667d77ebb572_.py
compose/local/fastapi/: Dockerfile  entrypoint
compose/local/fastapi/celery/flower/: start
project/: __init__.py  celery_utils.py  config.py  database.py  logging.py
project/users/: __init__.py  models.py  tasks.py  views.py
project/users/templates/: form.html  form_htmx.html  form_socketio.html  form_ws.html
project/ws/: __init__.py  views.py
src/: main.py
