[project]
name = "fastapi-celery-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "saitaro", email = "nort87@mail.ru" }
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.25.0",
    "blue>=0.9.1",
    "celery==5.3.6",
    "redis==5.0.1",
    "flower>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_celery_project"]
